--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Django==1.4
+South==0.7.5
 django-bootstrap-form==2.0.3
+django-registration==0.8
 django-social-auth==0.6.9
 django-tastypie==0.9.11
 httplib2==0.7.4
