--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ readline-6.2.2-py2.7-macosx-10.7-intel.egg/
 nhsbugs/static/uploads/*.gif
 nhsbugs/static/uploads/*.jpg
 nhsbugs/static/uploads/*.png
+src/
